syntax = "proto3";
package account;
option go_package = "proto/account";
import "proto/role.proto";


//消息号
enum MSG_ACCOUNT {
    PLACEHOLDER =0;  //占位
    
    //账号模块
    Module  = 1000;
    
    //method
    Login = 1001;//用户登陆
    Register= 1002;//注册账号
    CreateRole= 1003;//创建角色     
}


//用户账号信息
message P_Account {
    string account=1;
    string password =2;
    string equipment =3; //设备信息
    string registrationSource =4; //注册来源
    string registrationTime =5; //注册时间
}
 
 



//用户登陆
message c2s_Login {
    string account  =1;
    string password =2;
}

message  s2c_Login {
    sint32	retcode	= 1;
    role.Pb_RoleInfo RoleInfo =2;
    map<uint32,string> Settings =3;  //游戏内设置

    map<uint32, string> ItemList = 7;//背包物品列表
    //宗门
    //好友
    //任务
}

message c2s_Register {
    string account  =1;
    string password =2;
    string CDK = 3;//注册码
    string Source =4;//注册来源
    string Equipment =5;//设备信息
}

message s2c_Register {
    sint32	retcode	= 1; 
}
 
// 创建角色
message c2s_CreateRole {
    string RoleName =1;
    int32 sex =2;
}

message  s2c_CreateRole {
    sint32	retcode	= 1;
    role.Pb_RoleInfo RoleInfo =2;
}

